--- a/static/styles.css
+++ b/static/styles.css
@@ -335,6 +335,10 @@ main {
     animation-play-state: paused;
 }
 
+#data-scroll.paused span#num2 {
+    animation-play-state: paused;
+}
+
 @keyframes scroll {
     0% {
         transform: translateX(100%);
