--- a/static/styles.css
+++ b/static/styles.css
@@ -324,8 +324,7 @@ main {
 #data-scroll span {
     position: absolute;
     display: inline-block;
-    word-wrap: nowrap;
-    margin-left: 7px;
+    white-space: nowrap;
     animation: scroll 16s linear infinite;
     animation-play-state: paused;
 }
