--- a/static/styles.css
+++ b/static/styles.css
@@ -323,20 +323,22 @@ main {
     display: inline-block;
     white-space: nowrap;
     animation: scroll 16s linear infinite;
-    animation-play-state: paused;
+    animation-duration: infinite;
+    transition: animation-duration 1s linear;
 }
 
 #data-scroll span#num2 {
     animation: scroll2 16s linear infinite;
-    animation-play-state: paused;
+    animation-duration: infinite;
+    transition: animation-duration 1s linear;
 }
 
 #data-scroll.playing span {
-    animation-play-state: running;
+    animation-duration: 16s;
 }
 
 #data-scroll.playing span#num2 {
-    animation-play-state: running;
+    animation-duration: 16s;
 }
 
 @keyframes scroll {
