--- a/static/styles.css
+++ b/static/styles.css
@@ -323,13 +323,13 @@ main {
     display: inline-block;
     white-space: nowrap;
     animation: scroll 16s linear infinite;
-    animation-duration: infinite;
+    animation-duration: 99999999999s;
     transition: animation-duration 1s linear;
 }
 
 #data-scroll span#num2 {
     animation: scroll2 16s linear infinite;
-    animation-duration: infinite;
+    animation-duration: 99999999999s;
     transition: animation-duration 1s linear;
 }
 
