--- a/static/styles.css
+++ b/static/styles.css
@@ -323,21 +323,23 @@ main {
     display: inline-block;
     white-space: nowrap;
     animation: scroll 16s linear infinite;
-    animation-duration: 512s;
-    transition: animation-duration 32s ease-out;
+    animation-play-state: paused;
+    transition: animation-duration 1s ease-out;
 }
 
 #data-scroll span#num2 {
     animation: scroll2 16s linear infinite;
-    animation-duration: 512s;
-    transition: animation-duration 32s ease-out;
+    animation-play-state: paused;
+    transition: animation-duration 1s ease-out;
 }
 
 #data-scroll.playing span {
+    animation-play-state: running;
     animation-duration: 16s;
 }
 
 #data-scroll.playing span#num2 {
+    animation-play-state: running;
     animation-duration: 16s;
 }
 
