--- a/static/styles.css
+++ b/static/styles.css
@@ -268,6 +268,7 @@ main {
     padding: 10px;
     cursor: pointer;
     color: #ccc;
+    background-image: linear-gradient(135deg, var(--art-color0), var(--art-color1), var(--art-color2), var(--art-color3));
 }
 
 .playlist-item:hover {
