--- a/static/styles.css
+++ b/static/styles.css
@@ -279,12 +279,12 @@ main {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 2px;
+    gap: 0px;
 }
 
 .playlist-item-art img {
-    width: 100%;
-    height: 100%;
+    width: 80px;
+    height: 80px;
     object-fit: cover;
 }
 
