--- a/static/styles.css
+++ b/static/styles.css
@@ -273,6 +273,7 @@ main {
     flex-direction: column;
     align-items: center;
     padding: 15px;
+    padding-bottom: 0;
     gap: 15px;
 
     transition: transform 0.3s ease, background-position 1s ease-out;
