--- a/static/styles.css
+++ b/static/styles.css
@@ -259,14 +259,12 @@ main {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
-    background-color: #000;
 }
 
 .search-results-albums {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
-    background-color: #000;
 }
 
 .playlist-item {
@@ -339,6 +337,10 @@ main {
     font-size: 18px;
     font-weight: bold;
     color: #fff;
+    /* allow only one line */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .playlist-item-count {
