--- a/static/styles.css
+++ b/static/styles.css
@@ -144,20 +144,21 @@ aside button.selected {
 
 #user-info span {
     font-weight: bold;
+    font-size: 18px;
 }
 
 #user-info button {
     margin-top: 10px;
     padding: 5px 10px;
-    background-color: #f44336;
+    background-color: #000;
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 0;
     cursor: pointer;
 }
 
 #user-info button:hover {
-    background-color: #d32f2f;
+    background-color: #f44336;
 }
 
 /* Main content adjustments */
