--- a/static/styles.css
+++ b/static/styles.css
@@ -115,6 +115,40 @@ aside button.selected {
     border: 1px solid #fff;
 }
 
+input[type="text"] {
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    background-color: #000;
+    color: #fff;
+    font-family: "Urbanist"
+}
+
+input[type="text"]::placeholder {
+    color: #fff;
+}
+
+input[type="text"]:focus {
+    outline: none;
+}
+
+input[type="password"] {
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    background-color: #000;
+    color: #fff;
+    font-family: "Urbanist"
+}
+
+input[type="password"]::placeholder {
+    color: #fff;
+}
+
+input[type="password"]:focus {
+    outline: none;
+}
+
 #playlists-list,
 #albums-list {
     list-style-type: none;
@@ -268,22 +302,27 @@ main {
     background-position: 0%;
 }
 
-#search-input {
+#login-form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+#login-form button {
+    width: 100%;
     padding: 10px;
     font-size: 16px;
-    border: none;
-    width: 100%;
     background-color: #000;
     color: #fff;
-    font-family: "Urbanist"
+    border: 1px solid #000;
+    cursor: pointer;
+    transition: border 0.2s;
 }
 
-#search-input::placeholder {
-    color: #fff;
-}
-
-#search-input:focus {
-    outline: none;
+#login-form button:hover {
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #fff;
 }
 
 #search-results {
