--- a/static/styles.css
+++ b/static/styles.css
@@ -334,13 +334,13 @@ main {
     padding: 20px;
 }
 
-.search-results-playlists {
+.playlist-cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
 }
 
-.search-results-albums {
+.albums-cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
