--- a/static/styles.css
+++ b/static/styles.css
@@ -83,6 +83,13 @@ aside {
     background-color: #000;
     padding: 20px;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+}
+
+#sidebar {
+    overflow-y: auto;
+    flex: 1;
 }
 
 aside h2,
