--- a/static/styles.css
+++ b/static/styles.css
@@ -79,7 +79,7 @@ aside {
     top: 0;
     left: 0;
     width: 300px;
-    height: 100vh;
+    height: calc(100vh - 425px);
     background-color: #000;
     padding: 20px;
     box-sizing: border-box;
