--- a/static/styles.css
+++ b/static/styles.css
@@ -253,22 +253,11 @@ main {
     line-height: 1.2;
     max-height: 2.4em;
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow: "";
     white-space: wrap;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-}
-
-.music-item-title:after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 1.2em;
-    background: linear-gradient(to left, #000, transparent);
-    pointer-events: none;
 }
 
 .music-item-artist {
