--- a/static/styles.css
+++ b/static/styles.css
@@ -747,7 +747,17 @@ main {
     background-color: #000;
 }
 
-
+#audio-controls:before {
+    content: '';
+    position: absolute;
+    left: -50px;
+    top: 0;
+    bottom: 0;
+    width: 50px;
+    background: linear-gradient(to right, transparent, #000);
+    pointer-events: none;
+    z-index: 1;
+}
 
 #audio-controls button {
     background: none;
@@ -777,14 +787,6 @@ main {
 
 .control-button {
     position: relative;
-}
-
-#repeat-button:before {
-    content: '';
-    position: absolute;
-    width: 50px;
-    background: linear-gradient(to left, #000, transparent);
-    z-index: 1;
 }
 
 .control-button::before {
