--- a/static/styles.css
+++ b/static/styles.css
@@ -930,6 +930,7 @@ main {
 @media (max-width: 768px) {
     aside {
         transform: translateX(-100%);
+        transition: transform 0.3s;
     }
 
     .sidebar-toggle {
@@ -938,5 +939,22 @@ main {
 
     aside.active {
         transform: translateX(0);
+    }
+
+    #anti-sidebar {
+        width: 100%;
+        left: 0;
+    }
+
+    #cover-art-container {
+        display: none;
+    }
+
+    #data-scroll-container {
+        display: none;
+    }
+
+    #now-playing {
+        display: none;
     }
 }
