--- a/static/styles.css
+++ b/static/styles.css
@@ -941,6 +941,17 @@ main {
         transform: translateX(0);
     }
 
+    aside.active::after {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 10;
+    }
+
     #anti-sidebar {
         width: 100%;
         left: 0;
