--- a/static/styles.css
+++ b/static/styles.css
@@ -929,6 +929,8 @@ main {
 
 @media (max-width: 768px) {
     aside {
+        height: 100vh;
+        z-index: 20;
         transform: translateX(-100%);
         transition: transform 0.3s;
     }
