--- a/static/styles.css
+++ b/static/styles.css
@@ -930,7 +930,7 @@ main {
 @media (max-width: 768px) {
     aside {
         height: 100vh;
-        z-index: 20;
+        z-index: 10;
         transform: translateX(-100%);
         transition: transform 0.3s;
     }
@@ -943,7 +943,7 @@ main {
         transform: translateX(0);
     }
 
-    aside.active::after {
+    aside.active::before {
         content: '';
         position: fixed;
         top: 0;
@@ -951,7 +951,7 @@ main {
         right: 0;
         bottom: 0;
         background-color: rgba(0, 0, 0, 0.5);
-        z-index: 10;
+        z-index: 9;
     }
 
     #anti-sidebar {
