--- a/static/styles.css
+++ b/static/styles.css
@@ -930,6 +930,7 @@ main {
 @media (max-width: 768px) {
     aside {
         height: 100vh;
+        width: 100%;
         z-index: 10;
         transform: translateX(-100%);
         transition: transform 0.3s;
@@ -941,17 +942,6 @@ main {
 
     aside.active {
         transform: translateX(0);
-    }
-
-    aside.active::before {
-        content: '';
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 9;
     }
 
     #anti-sidebar {
