--- a/static/styles.css
+++ b/static/styles.css
@@ -968,4 +968,9 @@ main {
     .playtime {
         display: none;
     }
+
+    #track-info {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
 }
