--- a/static/styles.css
+++ b/static/styles.css
@@ -740,8 +740,11 @@ main {
 
 #mini-cover-art {
     display: none;
-    width: 60px;
-    height: 60px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    height: 80px;
+    width: 80px;
     box-shadow: 0 0 40px 20px var(--art-color);
     transition: box-shadow, 0.6s ease-out;
 }
