--- a/static/styles.css
+++ b/static/styles.css
@@ -136,6 +136,8 @@ aside button.selected {
     top: 10px;
     left: 10px;
     z-index: 20;
+    width: 50px;
+    height: 50px;
     background-color: #000;
     color: #fff;
     border: none;
