--- a/static/styles.css
+++ b/static/styles.css
@@ -938,7 +938,54 @@ main {
     display: none;
 }
 
-/* TODO: Responsive Design */
+.modal {
+    display: none;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 1000;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    width: 300px;
+}
+
+.modal-content {
+    position: relative;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #000;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#donate-button {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #FF5E5B;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+#donate-button:hover {
+    background-color: #ff392e;
+}
+
+@media (min-width: 768px) {
+    .modal {
+        display: block;
+    }
+}
 
 @media (max-width: 768px) {
     aside {
