--- a/static/styles.css
+++ b/static/styles.css
@@ -944,12 +944,10 @@ main {
     top: 10px;
     right: 10px;
     z-index: 1000;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    background-color: #000;
+    box-shadow: 0 0 40px 20px var(--art-color);
     padding: 20px;
-    width: 300px;
+    width: 200px;
 }
 
 .modal-content {
@@ -960,7 +958,7 @@ main {
     position: absolute;
     top: 10px;
     right: 10px;
-    color: #000;
+    color: #fff;
     font-size: 20px;
     font-weight: bold;
     cursor: pointer;
@@ -979,12 +977,6 @@ main {
 
 #donate-button:hover {
     background-color: #ff392e;
-}
-
-@media (min-width: 768px) {
-    .modal {
-        display: block;
-    }
 }
 
 @media (max-width: 768px) {
