--- a/static/styles.css
+++ b/static/styles.css
@@ -945,13 +945,18 @@ main {
     right: 10px;
     z-index: 1000;
     background-color: #000;
-    box-shadow: 0 0 40px 20px var(--art-color);
     padding: 20px;
-    width: 200px;
+    width: 700px;
 }
 
 .modal-content {
     position: relative;
+}
+
+.modal-content h2 {
+    position: absolute;
+    top: 10px;
+    left: 10px;
 }
 
 .close-btn {
@@ -977,6 +982,12 @@ main {
 
 #donate-button:hover {
     background-color: #ff392e;
+}
+
+@media (min-width: 1000px) {
+    .modal {
+        display: block;
+    }
 }
 
 @media (max-width: 768px) {
