--- a/static/styles.css
+++ b/static/styles.css
@@ -979,12 +979,15 @@ main {
 }
 
 #alredy-donated-modal-button {
+    position: absolute;
+    right: 10px;
     display: inline-block;
     padding: 10px 20px;
     background-color: #FF5E5B;
     color: #fff;
     text-decoration: none;
-    font-size: 12px;
+    font-size: 8px;
+    cursor: pointer;
 }
 
 @keyframes shake {
