--- a/static/styles.css
+++ b/static/styles.css
@@ -978,13 +978,11 @@ main {
     animation: shake 0.5s 2 ease-in-out;
 }
 
-#alredy-donated-modal-button {
+#alredy-donated-button {
     position: absolute;
     right: 10px;
     display: inline-block;
     padding: 10px 20px;
-    background-color: #FF5E5B;
-    color: #fff;
     text-decoration: none;
     font-size: 8px;
     cursor: pointer;
