--- a/static/styles.css
+++ b/static/styles.css
@@ -983,15 +983,19 @@ main {
 }
 
 #monero-wallet {
-    display: none;
     padding: 10px;
-    background-color: #000;
     color: #fff;
+    border: #fff solid 1px;
+    display: flex;
+    justify-content: center;
+    overflow: auto;
+    margin-bottom: 30px;
 }
 
 #alredy-donated-button {
     position: absolute;
     right: 10px;
+    bottom: 10px;
     display: inline-block;
     text-decoration: none;
     font-size: 16px;
