--- a/static/styles.css
+++ b/static/styles.css
@@ -480,19 +480,17 @@ main {
 
 #playlist-menu {
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    scale: 1;
     background-color: #000;
     box-shadow: 0 0 40px 20px var(--art-color);
     padding: 20px;
     z-index: 1000;
 
-    transition: transform 0.6s, box-shadow 0.6s ease-out;
+    transition: scale 0.6s, box-shadow 0.6s ease-out;
 }
 
 .hidden #playlist-menu {
-    transform: scale(0);
+    scale: 0;
     box-shadow: 0 0 40px 20px #0000;
 }
 
