--- a/static/styles.css
+++ b/static/styles.css
@@ -480,17 +480,17 @@ main {
 
 #playlist-menu {
     position: fixed;
-    scale: 1;
+    transform: translate(-50%, -50%);
     background-color: #000;
     box-shadow: 0 0 40px 20px var(--art-color);
     padding: 20px;
     z-index: 1000;
 
-    transition: scale 0.6s, box-shadow 0.6s ease-out;
+    transition: transform 0.6s, box-shadow 0.6s ease-out;
 }
 
-.hidden #playlist-menu {
-    scale: 0;
+#playlist-menu.hidden {
+    transform: scale(0);
     box-shadow: 0 0 40px 20px #0000;
 }
 
