--- a/static/styles.css
+++ b/static/styles.css
@@ -481,16 +481,17 @@ main {
 #playlist-menu {
     position: fixed;
     transform: translate(-50%, -50%);
+    scale: 1;
     background-color: #000;
     box-shadow: 0 0 40px 20px var(--art-color);
     padding: 20px;
     z-index: 1000;
 
-    transition: transform 0.6s, box-shadow 0.6s ease-out;
+    transition: scale 0.6s, box-shadow 0.6s ease-out;
 }
 
-#playlist-menu.hidden {
-    transform: scale(0);
+#playlist-menu.menu-hidden {
+    scale: 0;
     box-shadow: 0 0 40px 20px #0000;
 }
 
