--- a/static/styles.css
+++ b/static/styles.css
@@ -486,7 +486,7 @@ main {
     padding: 20px;
     z-index: 1000;
 
-    transition: transform 0.2s, box-shadow 0.6s ease-out;
+    transition: transform 0.2s, top 0.2s, left 0.2s, box-shadow 0.6s ease-out;
 }
 
 #playlist-menu.menu-hidden {
