--- a/static/styles.css
+++ b/static/styles.css
@@ -480,17 +480,18 @@ main {
 
 #playlist-menu {
     position: fixed;
-    transform: translate(-50%, -50%);
+    transform: translate(50%, 50%);
+    scale: 1;
     background-color: #000;
     box-shadow: 0 0 40px 20px var(--art-color);
     padding: 20px;
     z-index: 1000;
 
-    transition: transform 0.2s, top 0.2s, left 0.2s, box-shadow 0.6s ease-out;
+    transition: scale 0.2s, box-shadow 0.6s ease-out;
 }
 
 #playlist-menu.menu-hidden {
-    transform: translate(-50%, -150%);
+    scale: 0;
     box-shadow: 0 0 40px 20px #0000;
 }
 
