--- a/static/styles.css
+++ b/static/styles.css
@@ -486,11 +486,11 @@ main {
     padding: 20px;
     z-index: 1000;
 
-    transition: box-shadow 0.6s ease-out;
+    transition: scale 0.4s, box-shadow 0.6s ease-out;
 }
 
 #playlist-menu.menu-hidden {
-    scale: 0;
+    scale: 0.7;
     box-shadow: 0 0 40px 20px #0000;
 }
 
