--- a/static/styles.css
+++ b/static/styles.css
@@ -114,7 +114,7 @@ aside button {
     background-color: #000;
     color: #fff;
     border: 1px solid #000;
-    overflow: hidden;
+    overflow-x: hidden;
     text-overflow: ellipsis;
     cursor: pointer;
     transition: border 0.2s;
