--- a/static/styles.css
+++ b/static/styles.css
@@ -483,6 +483,26 @@ main {
     color: #ccc;
 }
 
+.add-playlist-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    padding: 5px;
+    font-size: 12px;
+    cursor: pointer;
+    background-color: #0000;
+    border: none;
+    transition: transform 0.2s;
+}
+
+.playlist-item:hover svg {
+    opacity: 1;
+}
+
+.playlist-item .add-playlist-button:hover {
+    transform: scale(1.2);
+}
+
 #playlist-menu {
     position: fixed;
     scale: 1;
