--- a/static/styles.css
+++ b/static/styles.css
@@ -336,23 +336,6 @@ main {
     transform: scale(1.2);
 }
 
-.music-item .share-song-button {
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    padding: 5px;
-    font-size: 12px;
-    cursor: pointer;
-    background-color: #0000;
-    border: none;
-    transition: transform 0.2s;
-}
-
-.music-item .share-song-button:hover {
-    transform: scale(1.2);
-}
-
-
 .music-item.playing {
     background-image: linear-gradient(135deg, #000, #000);
     box-shadow: 0 0 40px 20px var(--art-color);
@@ -835,6 +818,48 @@ main {
     height: 300px;
     box-shadow: 0 0 40px 20px var(--art-color);
     transition: box-shadow, 0.6s ease-out;
+}
+
+#cover-art-container svg {
+    width: 24px;
+    height: 24px;
+    fill: #fff;
+    opacity: 0;
+    cursor: pointer;
+
+    transition: opacity 0.2s;
+}
+
+#cover-art-container:hover svg {
+    opacity: 1;
+}
+
+#cover-art-container .share-song-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    padding: 5px;
+    font-size: 12px;
+    cursor: pointer;
+    background-color: #000;
+    border: none;
+    transition: transform 0.2s;
+}
+
+#cover-art-container .share-song-button:hover {
+    transform: scale(1.2);
+}
+
+#cover-art-container .edit-playlist-button {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    padding: 5px;
+    font-size: 12px;
+    cursor: pointer;
+    background-color: #000;
+    border: none;
+    transition: transform 0.2s;
 }
 
 #mini-cover-art {
