--- a/static/styles.css
+++ b/static/styles.css
@@ -1159,7 +1159,7 @@ main {
 #toast-container {
     position: fixed;
     bottom: 30px;
-    right: 30px;
+    left: 30px;
     z-index: 1000;
 }
 
@@ -1168,7 +1168,7 @@ main {
     color: #000;
     padding: 12px 24px;
     border-radius: 0px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.6);
     margin-bottom: 10px;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
